Apply Design Pattens and Refactoring code

--- a/dev/m1devtools/template/app/etc/modules/Vendor_Module.xml.twig
+++ b/dev/m1devtools/template/app/etc/modules/Vendor_Module.xml.twig
@@ -4,9 +4,9 @@
 -->
 <config>
     <modules>
-        <{{ module.getName() }}>
+        <{{ module.getFullName() }}>
             <active>true</active>
             <codePool>{{ module.getCodePool() }}</codePool>
-        </{{ module.getName() }}>
+        </{{ module.getFullName() }}>
     </modules>
 </config>
