--- a/dev/m1devtools/template/module/Helper/Data.php.twig
+++ b/dev/m1devtools/template/module/Helper/Data.php.twig
@@ -1,7 +1,7 @@
 <?php
 {% include "@docheader/docheader.twig" %}
 
-class {{ module.getName() }}_Helper_Data extends Mage_Core_Helper_Abstract
+class {{ module.getFullName() }}_Helper_Data extends Mage_Core_Helper_Abstract
 {
 
 }
